--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,14 @@ steps:
 - script: cd $(projectFolder) && npm test -- --coverage
   displayName: 'Test'
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(buildFolder)
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    includeRootFolder: false
+
+## Publish the zip file
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
