--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 trigger:
-- new-website
+- main
 
 pool:
   vmImage: ubuntu-latest
@@ -15,7 +15,20 @@ variables:
 
 steps:
 - script: cd $(projectFolder) && npm install
-  displayName: 'npm install'
-- script: npm run build
-  displayName: 'npm run build'
+  displayName: 'Install dependencies'
+- script: cd $(projectFolder) && npm run build
+  displayName: 'Build'
+- script: cd $(projectFolder) && npm test -- --coverage
+  displayName: 'Test'
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(buildFolder)
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/release.zip'
+    includeRootFolder: true
+
+## Publish the zip file
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/release.zip'
