--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
       displayName: 'Install dependencies'
     - script: cd $(projectFolder) && npm run build
       displayName: 'Build'
-    - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold='{\"global\":{\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\",\"statements\":\"60\"}}'
+    - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold='{\"global\":{"statements":"60"}}'
       displayName: 'Test'
     - task: ArchiveFiles@2
       inputs:
