--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,8 @@ stages:
       displayName: 'Build'
     - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold='{"global":{"statements":"60"}}'
       displayName: 'Test'
+    - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold={"global":{"statements":"60"}}
+      displayName: 'Test1'
     - task: ArchiveFiles@2
       inputs:
         rootFolderOrFile: $(buildFolder)
