--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,11 @@ stages:
         inputs:
           notifyUsers: 'E6022@itsector.pt'
           instructions: 'Test'
-  - job: Placeholder
+  - job: Testing
     steps:
+    - script: cd $(projectFolder) && npm install
+      displayName: 'Install dependencies'
+    - script: cd $(projectFolder) && npm run build
+      displayName: 'Build'
     - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold='{"global":{"branches":"$(qualityGateThreshold)","functions":"$(qualityGateThreshold)","lines":"$(qualityGateThreshold)","statements":"$(qualityGateThreshold)"}}'
       displayName: 'Full Test Suite'
