--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ variables:
    projectFolder: 'website'
    buildFolder: 'website/build'
    qualityGateThreshold: $(Thresholds.codeCoverage)
+   runMutation: $(Thresholds.runMutation)
 
 stages:
 - stage: Development
@@ -58,3 +59,6 @@ stages:
       displayName: 'Build'
     - script: cd $(projectFolder) && npm run test -- --coverage --coverageThreshold='{"global":{"branches":"$(qualityGateThreshold)","functions":"$(qualityGateThreshold)","lines":"$(qualityGateThreshold)","statements":"$(qualityGateThreshold)"}}'
       displayName: 'Full Test Suite'
+    - script: cd $(projectFolder) &&
+      displayName: Mutation testing
+      condition: variables['runMutation']
