--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,10 +31,9 @@ stages:
       displayName: 'Build'
     - script: cd $(projectFolder) && npm run test -- --onlyChanged --coverage --coverageThreshold='{"global":{"branches":"$(qualityGateThreshold)","functions":"$(qualityGateThreshold)","lines":"$(qualityGateThreshold)","statements":"$(qualityGateThreshold)"}}'
       displayName: 'Partial Test Suite' 
-    - script: cd /dotNetLogin && dotnet publish
+    - script: cd dotNetLogin && dotnet publish
       displayName: dotNet Publish
     - task: CopyFiles@2
-      displayName: Copy SPA Assets to TEMP
       inputs:
         SourceFolder: '$(projectFolder)'
         Contents: |
