--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,8 +36,8 @@ stages:
     - task: CopyFiles@2
       inputs:
         Contents: |
-          website/build
-          dotNetLogin/publish
+          website/build/**
+          dotNetLogin/publish/**
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - script: cd $(Build.ArtifactStagingDirectory) && ls
