--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
       inputs:
         Contents: |
           website/build/**
-          dotNetLogin/publish/**
+          dotNetLogin/bin/Debug/net6.0/publish/**
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - script: cd $(Build.ArtifactStagingDirectory) && ls
