--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
