--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,3 +82,4 @@ stages:
         inputs:
           notifyUsers: 'E6022@itsector.pt'
           instructions: 'Release'
+          onTimeout: reject
