--- a/dotNetServices/dotNetLogin/WebApi.csproj
+++ b/dotNetServices/dotNetLogin/WebApi.csproj
@@ -4,6 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Dapr.Client" Version="1.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
     </ItemGroup>
