--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,14 @@ stages:
       displayName: 'dotNet Publish'
     - script: cd dotNetServices && mkdir -p ../save && for d in */OutputExe/; do (mkdir -p ../save/$d && cd "$d" && cp -r * ../../../save/$d ); done  
       displayName: Gathering Published Executables
+    - task: AzureFileCopy@5
+      inputs:
+        SourcePath: 'website/build'
+        azureSubscription: 'connection'
+        Destination: 'AzureBlob'
+        storage: 'itsectorfeupexample'
+        ContainerName: 'vhds'
+        CleanTargetBeforeCopy: true
     - task: CopyFiles@2
       inputs:
         Contents: |
