--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,8 +36,7 @@ stages:
         ContainerName: 'vhds'
         CleanTargetBeforeCopy: true
         AdditionalArgumentsForBlobCopy: 
-        outputStorageUri: 'https://itsectorfeupexample.blob.core.windows.net/vhds?sp=racwdli&st=2023-05-05T13:04:11Z&se=2023-05-05T21:04:11Z&sv=2022-11-02&sr=c&sig=B9r959V41pJlHoLw88Cw7U6tfgkv0TxbK030lO3ZM4k%3D'
-        outputStorageContainerSasToken: 'sp=racwdli&st=2023-05-05T13:04:11Z&se=2023-05-05T21:04:11Z&sv=2022-11-02&sr=c&sig=B9r959V41pJlHoLw88Cw7U6tfgkv0TxbK030lO3ZM4k%3D'
+        outputStorageContainerSasToken: 'se=2024-01-01&sp=rwdl&sv=2021-06-08&sr=c&sig=Uy%2Bl1xQFm7KkN3uGEhIT5KnmiyTU74MaKxVkvzIdvU4%3D'
 
     - script: cd $(projectFolder) && npm install
       displayName: 'Install dependencies'
