--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,10 @@ stages:
         azureSubscription: 'connection'
         scriptType: 'ps'
         scriptLocation: 'inlineScript'
-        inlineScript: 'az storage blob generate-sas --account-name itsectorfeupexample --container-name vhds --name blob --permissions acdrw --expiry 2023-05-08 --auth-mode login --as-user'
+        inlineScript: 'az storage blob generate-sas --account-name itsectorfeupexample --container-name vhds --name blob --permissions acdrw --expiry 2023-05-08 --auth-mode login --as-user > sas.txt'
         powerShellErrorActionPreference: 'continue'
+    - script: type sas.txt
+      displayName: Debug
     - task: AzureFileCopy@3
       inputs:
         SourcePath: 'helloworld.txt'
