Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
     - task: PowerShell@2
       inputs:
         filePath: 'variable.ps1'
-        arguments: '$pat'
+        arguments: -Pat '$pat'
     - task: AzureFileCopy@3
       inputs:
         SourcePath: 'helloworld.txt'
