Changed to ubuntu

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ variables:
 stages:
 - stage: Development
   pool:
-    vmImage: windows-latest
+    vmImage: ubuntu-latest
   jobs:
   - job: Development
     steps:
