Separated deployment stage

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,18 +57,26 @@ stages:
     - task: PublishBuildArtifacts@1
       inputs:
         pathtoPublish: '$(Build.ArtifactStagingDirectory)/release.zip'
+        targetPath: '$(System.DefaultWorkingDirectory)/publish'
       displayName: Artifact Release
     
-    - task: AzureFileCopy@5
-      inputs:
-        SourcePath: '$(Build.ArtifactStagingDirectory)/release.zip'
-        azureSubscription: 'connection'
-        Destination: 'AzureVMs'
-        storage: 'itsectorfeupexample'
-        resourceGroup: 'EXAMPLE-RESOURCES'
-        vmsAdminUserName: 'adminuser'
-        vmsAdminPassword: 'P@$$w0rd1234!'
-        TargetPath: '/'
+    
+- stage: Deployment
+  pool:
+      vmImage: windows-latest
+  jobs:
+  - job: Deployment
+  steps:
+  - task: AzureFileCopy@5
+    inputs:
+      SourcePath: '$(System.DefaultWorkingDirectory)/publish'
+      azureSubscription: 'connection'
+      Destination: 'AzureVMs'
+      storage: 'itsectorfeupexample'
+      resourceGroup: 'EXAMPLE-RESOURCES'
+      vmsAdminUserName: 'adminuser'
+      vmsAdminPassword: 'P@$$w0rd1234!'
+      TargetPath: '/'
     
 
 - stage: QA
